--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
-  }
-  
+  "presets": ["react-app"],
+  "plugins": ["@babel/plugin-proposal-private-property-in-object"]
+}
